frontend/test/should_fail/defYield_004e.grg
using defYield;

test t
{
	def -x:EE->;
	pp:p(yield x);
}

pattern p(def -x:EE->)
{
	-y:E1->;
	yield { yield x = y; }
}

